// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render multiple expenses summary 1`] = `
<div>
  <p>
    Viewing 
    5
     
    expenses
     with total: $
    5000.00
  </p>
</div>
`;

exports[`Should render singular expense summary 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     with total: $
    0.01
  </p>
</div>
`;
